# lab_2_rpn_calculator

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
html/: rpn_8cpp.html  rpn_8h.html
include/: rpn.h
latex/: rpn_8cpp.tex  rpn_8h.tex
tests/: CMakeLists.txt  test_rpn.cpp
